--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tile-reduce script to check polygons in vector tiles against Earcut",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint *.js"
   },
   "keywords": [],
   "author": "Vladimir Agafonkin",
